--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react-scripts": "^5.0.0",
     "reactstrap": "^9.0.1",
     "styled-components": "^5.3.3",
-    "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.23"
   }
 }
